# edu-advent-2024

./: .gitignore  24.viz  README.md  advent.cabal  day01.md  day02.md  day03-re.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md
lib/: Advent.lhs  Advent.md
src/: day01.md  day02.md  day03-re.lhs  day03-re.md  day04.md  day06.md  day08.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day17.md  day21.md  day22.md  day24.md
