cabal-version: 3.0
name: advent
version: 0.1.0.0

common shared
  mixins:
    , base hiding (Prelude)
    , base-prelude (BasePrelude as Prelude)
  default-language: GHC2021
  ghc-options: -pgmL markdown-unlit
  build-depends: base, base-prelude
    , containers
    , mtl
    , text

executable day01
  import: shared
  main-is: day01.lhs

executable day02
  import: shared
  main-is: day02.lhs

executable day03
  import: shared
  main-is: day03.lhs

executable day04
  import: shared
  main-is: day04.lhs
