cabal-version: 3.0
name: advent
version: 0.1.0.0

common shared
  mixins:
    , base hiding (Prelude)
    , base-prelude (BasePrelude as Prelude)
  default-language: GHC2021
  default-extensions:
    , BlockArguments
    , LambdaCase
  ghc-options: -pgmL markdown-unlit
  build-depends: base, base-prelude
    , array
    , containers
    , linear
    , mtl
    , pcre-heavy
    , text

executable day01
  import: shared
  main-is: day01.lhs

executable day02
  import: shared
  main-is: day02.lhs

executable day03
  import: shared
  main-is: day03.lhs

executable day03-re
  import: shared
  main-is: day03-re.lhs

executable day04
  import: shared
  main-is: day04.lhs

executable day05
  import: shared
  main-is: day05.lhs

executable day06
  import: shared
  main-is: day06.lhs

executable day07
  import: shared
  main-is: day07.lhs

executable day08
  import: shared
  main-is: day08.lhs

executable day09
  import: shared
  main-is: day09.lhs
