cabal-version: 3.0
name: advent
version: 0.1.0.0

common lib-shared
  mixins:
    , base hiding (Prelude)
    , base-prelude (BasePrelude as Prelude)
  default-language: GHC2021
  default-extensions:
    , BlockArguments
    , DataKinds
    , LambdaCase
    , RecordWildCards
    , ViewPatterns
  ghc-options: -pgmL markdown-unlit
  build-depends: base, base-prelude
    , array
    , containers
    , extra
    , lens
    , linear
    , mtl
    , pcre-heavy
    , split
    , tagged
    , text

library
  import: lib-shared
  hs-source-dirs: lib
  exposed-modules: Advent

common shared
  import: lib-shared
  hs-source-dirs: src
  build-depends: advent

executable day01
  import: shared
  main-is: day01.lhs

executable day02
  import: shared
  main-is: day02.lhs

executable day03
  import: shared
  main-is: day03.lhs

executable day03-re
  import: shared
  main-is: day03-re.lhs

executable day04
  import: shared
  main-is: day04.lhs

executable day05
  import: shared
  main-is: day05.lhs

executable day06
  import: shared
  main-is: day06.lhs

executable day07
  import: shared
  main-is: day07.lhs

executable day08
  import: shared
  main-is: day08.lhs

executable day09
  import: shared
  main-is: day09.lhs

executable day10
  import: shared
  main-is: day10.lhs

executable day11
  import: shared
  main-is: day11.lhs

executable day12
  import: shared
  main-is: day12.lhs

executable day13
  import: shared
  main-is: day13.lhs

executable day14
  import: shared
  main-is: day14.lhs

executable day15
  import: shared
  main-is: day15.lhs
